WB-236-fix-site-shift-caused-by-menu

--- a/packages/ui/src/shared/styles/list-box.module.css
+++ b/packages/ui/src/shared/styles/list-box.module.css
@@ -16,6 +16,10 @@
     background: var(--ax-public-list-box-background-color);
     box-shadow: var(--ax-public-list-box-box-shadow);
     z-index: 10000;
+    &:global(:not(.base--expanded)) {
+      display: none;
+      transform: unset !important;
+    }
   }
 
   .list-box {
